syntax = "proto3";

package proto;


message ResponsePayload {
    bool success = 1;
    string error = 2;
    string detail = 3;
}
